--- a/html/css3/css1.html
+++ b/html/css3/css1.html
@@ -36,9 +36,9 @@
         p {
             font-size: 24px;
             margin: 0;
-            /*여백조정*/
+            /*테두리 두께조정*/
             padding: 0;
-            /*간격조정*/
+            /*글씨와 테두리 간격조정*/
             /* font-style: italic ; */
         }
 
